feat: improved add new page dialog

--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <head>
 	<title>nocms-publish</title>
-	<meta charset="UTF-8">
+	<meta charSet="utf-8" />
+	<meta httpEquiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="build/css/example.css" />
 </head>
