chore(example): add images to example

--- a/example/index.html
+++ b/example/index.html
@@ -12,15 +12,15 @@
 		<h1>Demo</h1>
     <div id="adminPanel"/>
 	</div>
-	<div id="nocms.config" style="display:none;">{"messageApi":"/message","widgetApi":"/widgets","cloudinaryCloudName":"miles","pdfFolders":["Pdf"],"peopleApi":"http://192.168.4.245:3000/people","publisherLoginUrl":"/publishing","publisherLogoutUrl":"/publishing/sign-out","authenticationCookieName":"nocms-authenticated","nocmsUserInfoCookieName":"nocms-user","userCookieName":"end-user-authenticated","pageTitlePostfix":" - Miles","googleAnalyticsId":"UA-55208-1"}</div>	
+	<div id="nocms.config" style="display:none;">{"imageApi": "http://localhost:9001/images", "messageApi":"/message","widgetApi":"/widgets","cloudinaryCloudName":"miles","pdfFolders":["Pdf"],"peopleApi":"http://192.168.4.245:3000/people","publisherLoginUrl":"/publishing","publisherLogoutUrl":"/publishing/sign-out","authenticationCookieName":"nocms-authenticated","nocmsUserInfoCookieName":"nocms-user","userCookieName":"end-user-authenticated","pageTitlePostfix":" - Miles","googleAnalyticsId":"UA-55208-1"}</div>
 	<div id="nocms.adminConfig" style="display:none;">{"segments":["Kunde","Kandidat"],"enableABTesting":true,"sites":[{"name":"in","domains":["milesdev.in:3080"],"lang":"en"},{"name":"no","domains":["milesdev.no:3080","localhost:3080"],"lang":"no"}],"lang":"no","site":"no"}</div>
 	<script>
 			window.NoCMS = {};
 			window.NoCMS.getNoCMSUserInfo = () => {
 				return {
 					id: "wenche.tollevsen@miles.no",
-					name: "Wenche Tollevsen", 
-					email: "wenche.tollevsen@miles.no", 
+					name: "Wenche Tollevsen",
+					email: "wenche.tollevsen@miles.no",
 					photo: "https://lh4.googleusercontent.com/-Slze07v3qfM/AAAAAAAAAAI/AAAAAAAAAAs/ME0Wwj3PRH0/photo.jpg",
 					claims: {
 						admin: true,
