--- a/example/index.html
+++ b/example/index.html
@@ -50,7 +50,7 @@
 				"site": "no",
 				"templateId": "newsPage",
 				"uri": "/kontakt",
-				"hasUnpublishedChanges": true
+				"changed": {}
 			}
 		</script>
 	<script src="./build/app.js"></script>
