--- a/example/index.html
+++ b/example/index.html
@@ -13,7 +13,7 @@
     <div id="adminPanel"/>
 	</div>
 	<div id="nocms.config" style="display:none;">{"imageApi": "http://localhost:9001/images", "messageApi":"/message","widgetApi":"/widgets","cloudinaryCloudName":"miles","pdfFolders":["Pdf"],"peopleApi":"http://192.168.4.245:3000/people","publisherLoginUrl":"/publishing","publisherLogoutUrl":"/publishing/sign-out","authenticationCookieName":"nocms-authenticated","nocmsUserInfoCookieName":"nocms-user","userCookieName":"end-user-authenticated","pageTitlePostfix":" - Miles","googleAnalyticsId":"UA-55208-1"}</div>
-	<div id="nocms.adminConfig" style="display:none;">{"segments":["Kunde","Kandidat"],"enableABTesting":true,"sites":[{"name":"in","domains":["milesdev.in:3080"],"lang":"en"},{"name":"no","domains":["milesdev.no:3080","localhost:3080"],"lang":"no"}],"lang":"no","site":"no"}</div>
+	<div id="nocms.adminConfig" style="display:none;">{"unpublish": false,"segments":["Kunde","Kandidat"],"enableABTesting":true,"sites":[{"name":"in","domains":["milesdev.in:3080"],"lang":"en"},{"name":"no","domains":["milesdev.no:3080","localhost:3080"],"lang":"no"}],"lang":"no","site":"no"}</div>
 	<script>
 			window.NoCMS = {};
 			window.NoCMS.getNoCMSUserInfo = () => {
