fix: make up for page history. Use mock data

--- a/example/index.html
+++ b/example/index.html
@@ -16,6 +16,7 @@
 	<div id="nocms.adminConfig" style="display:none;">{"unpublish": true,"segments":["Kunde","Kandidat"],"enableABTesting":true,"sites":[{"name":"in","domains":["milesdev.in:3080"],"lang":"en"},{"name":"no","domains":["milesdev.no:3080","localhost:3080"],"lang":"no"}],"lang":"no","site":"no"}</div>
 	<script>
 			window.NoCMS = {};
+			window.useMockData = true;
 			window.NoCMS.getNoCMSUserInfo = () => {
 				return {
 					id: "wenche.tollevsen@miles.no",
